build: 1.0.0打包