@@ -1,9 +1,6 @@
 module com.mambastu {
     requires javafx.controls;
-    requires javafx.fxml;
-    requires javafx.graphics;
     requires static lombok;
-    requires javafx.base;
     requires java.desktop;
     requires org.apache.logging.log4j;
     requires org.json;
@@ -11,7 +8,8 @@ module com.mambastu {
     requires jdk.jsobject;
     requires gdx;
 
-
     opens com.mambastu to javafx.fxml;
     exports com.mambastu;
 }
+
+// java --module-path ".\lib" --add-modules javafx.controls -jar neverout-1.0-SNAPSHOT.jar
